--- a/movie-catalog-service/movie-catalog-service-dev.properties
+++ b/movie-catalog-service/movie-catalog-service-dev.properties
@@ -3,4 +3,4 @@
 movie.info.service.url=http://movie-info-service/
 movie.ratings.service.url=http://rating-data-service/
 
-greetings=greetings from dev movie catalog service
+greetings=greetings from dev movie catalog service new commit
