--- a/user-service/user-service-prod.properties
+++ b/user-service/user-service-prod.properties
@@ -1,5 +1,5 @@
 # DataSource Configuration
-datasource.url=jdbc:mysql://localhost:3306/task-manager?serverTimezone=UTC&useLegacyDatetimeCode=false
+datasource.url=jdbc:mysql://localhost:3306/task-manager-production?serverTimezone=UTC&useLegacyDatetimeCode=false
 datasource.username=root
 datasource.password=CHamp@123
 
