updated show sql in prod

--- a/user-service/user-service-prod.properties
+++ b/user-service/user-service-prod.properties
@@ -5,4 +5,4 @@ datasource.password=CHamp@123
 
 # Hibernate Configuration
 hibernate.ddl-auto=create
-hibernate.show-sql=true
+hibernate.show-sql=false
