--- a/user-service/user-service.properties
+++ b/user-service/user-service.properties
@@ -4,5 +4,5 @@ datasource.username=root
 datasource.password=CHamp@123
 
 # Hibernate Configuration
-hibernate.ddl-auto=create
+hibernate.ddl-auto=update
 hibernate.show-sql=true
